--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <parent>
         <groupId>com.github.lukasz-kusek</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <groupId>com.github.lukasz-kusek</groupId>
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.github.lukasz-kusek</groupId>
             <artifactId>xml-comparator</artifactId>
-            <version>-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
 
         <dependency>
